k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kinamna-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kinamna-frontend
  template:
    metadata:
      labels:
        app: kinamna-frontend
    spec:
      containers:
        - name: kinamna-frontend
          image: siddjuugi/kinamna-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: kinamna-frontend
spec:
  selector:
    app: kinamna-frontend
  ports:
    - port: 3010
      targetPort: 3000
