k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kinamna-backend-temp
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    # cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - api.kinamna.com
  #     secretName: kinamna-backend-tls
  #   - hosts:
  #       - kinamna.com
  #     secretName: kinamna-frontend-tls
  rules:
    - host: api.kinamna.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kinamna-backend
                port:
                  number: 3001

    - host: kinamna.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kinamna-frontend
                port:
                  number: 3010
